# diman

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust.yml
crates/derive_dimension/: Cargo.toml
crates/derive_verify/: Cargo.toml
crates/derive_verify/src/: lib.rs
crates/diman_derive_verify/: Cargo.toml
crates/diman_derive_verify/src/: lib.rs
crates/diman_lib/: Cargo.toml
crates/diman_lib/src/: base_dimension_exponent.rs  dimension_exponent.rs  lib.rs  magnitude.rs  ratio.rs  runtime_unit_storage.rs
crates/diman_math/: Cargo.toml
crates/diman_unit_system/: Cargo.toml
crates/diman_unit_system/src/: derive_dimension.rs  dimension_math.rs  expression.rs  lib.rs  prefixes.rs  storage_types.rs  to_snakecase.rs  types.rs  verify.rs
crates/diman_unit_system/src/codegen/: base_dimension_type.rs  debug.rs  debug_trait.rs  dimension_def.rs  dimension_entry_type.rs  dimension_type.rs  dimensions.rs  float_methods.rs  generic_methods.rs  hdf5.rs  mod.rs  mpi.rs  quantity_type.rs  rand.rs  serde.rs  storage_types.rs  traits.rs  type_defs.rs  unit_constructors.rs  unit_type.rs  units.rs  units_and_constants.rs  vector_methods.rs
crates/diman_unit_system/src/codegen/num_traits/: mod.rs  operator_trait.rs
crates/diman_unit_system/src/parse/: attributes.rs  expression.rs  mod.rs  types.rs
crates/diman_unit_system/src/resolve/: error.rs  ident_storage.rs  item.rs  item_conversion.rs  mod.rs  resolver.rs
crates/diman_unit_system/src/types/: allowed_exponent.rs  base_dimension.rs  base_dimension_exponent.rs  expression.rs  mod.rs  prefixes.rs
crates/diman_unit_system/tests/: mod.rs
crates/diman_unit_system/tests/compile_fail/: dimension_annotation_violated_constant.rs  dimension_annotation_violated_constant.stderr  dimension_annotation_violated_unit.rs  dimension_annotation_with_unit_not_allowed.rs  dimension_definition_with_numeric_factor.rs  float_unknown_method_on_quantity_type_alias.rs  float_unknown_method_on_quantity_type_alias.stderr  resolver_dimension_in_constant_expression_not_allowed.rs  resolver_dimension_in_unit_expression_not_allowed.rs  resolver_dimension_in_unit_expression_not_allowed.stderr  resolver_duplicate_base_unit.rs  resolver_duplicate_base_unit.stderr  resolver_duplicate_definition.rs  resolver_duplicate_definition.stderr  resolver_duplicate_symbol.rs  resolver_partial_resolution.rs  resolver_prefixed_or_aliased_units_dont_generate_multiple_errors.rs  resolver_prefixed_or_aliased_units_dont_generate_multiple_errors.stderr  resolver_undefined_identifier.rs  resolver_undefined_identifier.stderr  resolver_units_in_dimension_expression_not_allowed.rs  resolver_units_in_dimension_expression_not_allowed.stderr  resolver_unresolvable.rs  resolver_unresolvable.stderr  type_mismatch_add_type_quantity.rs  type_mismatch_add_type_quantity.stderr  type_mismatch_dimension.rs  type_mismatch_dimension.stderr  type_mismatch_div_quantity.rs  type_mismatch_div_quantity.stderr  type_mismatch_div_quantity_type.rs  type_mismatch_div_quantity_type.stderr  type_mismatch_div_type_quantity.rs  type_mismatch_div_type_quantity.stderr  type_mismatch_function_call.rs  type_mismatch_function_call.stderr  type_mismatch_mul_quantity.rs  type_mismatch_mul_quantity.stderr  type_mismatch_mul_quantity_type.rs  type_mismatch_mul_quantity_type.stderr  (+2 more)
crates/diman_unit_system/tests/compile_fail/example_system/: mod.rs
crates/unit_system/: Cargo.toml
crates/unit_system/crates/derive_verify/src/: lib.rs
crates/unit_system/src/: derive_dimension.rs  dimension_math.rs  expression.rs  float_type.rs  gen_debug.rs  gen_float_methods.rs  gen_generic_methods.rs  gen_traits.rs  gen_vector_methods.rs  lib.rs  parse.rs  resolve.rs  storage_types.rs  types.rs  vector_type.rs  verify.rs
crates/unit_system/src/codegen/: debug.rs  float_methods.rs  generic_methods.rs  hdf5.rs  mod.rs  mpi.rs  rand.rs  serde.rs  traits.rs  type_defs.rs  unit_constructors.rs  utils.rs  vector_methods.rs
crates/unit_system/src/parse/: expression.rs  mod.rs  types.rs
crates/unit_system/src/resolve/: error.rs  item_conversion.rs  mod.rs  resolver.rs
githooks/: pre-commit
src/: debug_storage_type.rs  floats.rs  hdf5.rs  helpers.rs  lib.rs  mpi.rs  quantities_and_units.rs  quantity.rs  rand.rs  si.rs  storage_type.rs  temporary_test_system.rs  test_utils.rs  traits.rs  type_aliases.rs  unit_system.rs  vectors.rs
src/serde/: float_quantity.rs  mod.rs  vector_quantity.rs
src/si/: dimension.rs  mod.rs
src/test_system/: dimension.rs  mod.rs
tests/: all.rs  mod.rs
tests/basic/: mod.rs
tests/compile_fail/: dimension_annotation_violated_constant.rs  dimension_annotation_violated_constant.stderr  dimension_annotation_violated_unit.rs  dimension_annotation_violated_unit.stderr  dimension_annotation_with_unit_not_allowed.rs  dimension_annotation_with_unit_not_allowed.stderr  dimension_definition_with_numeric_factor.rs  dimension_definition_with_numeric_factor.stderr  float_unknown_method_on_quantity_type_alias.rs  float_unknown_method_on_quantity_type_alias.stderr  glam_unknown_method_on_quantity_type_alias.rs  glam_unknown_method_on_quantity_type_alias.stderr  quantity_definition_with_numeric_factor.rs  quantity_definition_with_numeric_factor.stderr  resolver_dimension_in_constant_expression_not_allowed.rs  resolver_dimension_in_constant_expression_not_allowed.stderr  resolver_dimension_in_unit_expression_not_allowed.rs  resolver_dimension_in_unit_expression_not_allowed.stderr  resolver_duplicate_base_unit.rs  resolver_duplicate_base_unit.stderr  resolver_duplicate_definition.rs  resolver_duplicate_definition.stderr  resolver_duplicate_symbol.rs  resolver_duplicate_symbol.stderr  resolver_partial_resolution.rs  resolver_partial_resolution.stderr  resolver_prefixed_or_aliased_units_dont_generate_multiple_errors.rs  resolver_undefined_identifier.rs  resolver_undefined_identifier.stderr  resolver_units_in_dimension_expression_not_allowed.rs  resolver_units_in_dimension_expression_not_allowed.stderr  resolver_unresolvable.rs  resolver_unresolvable.stderr  type_mismatch_add_type_quantity.rs  (+17 more)
(+16 files in other folders)
