[package]
name = "diman"
version = "0.2.0"
edition = "2021"
description = "Zero-cost compile-time dimensional analysis."
authors = ["Toni Peter <mail@tonipeter.de>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/tehforsch/diman"
categories = ["science"]
keywords = ["units", "dimensional-analysis"]
readme = "README.md"

[workspace]
members = ["crates/*"]

[features]
glam = ["dep:glam", "unit_system/glam"]
glam-vec2 = ["glam", "f32", "unit_system/glam-vec2"]
glam-dvec2 = ["glam", "f64", "unit_system/glam-dvec2"]
glam-vec3 = ["glam", "f32", "unit_system/glam-vec3"]
glam-dvec3 = ["glam", "f64", "unit_system/glam-dvec3"]
f32 = ["unit_system/f32"]
f64 = ["unit_system/f64"]
gen-vec-names = ["unit_system/gen-vec-names"]
si = []

mpi = ["dep:once_cell", "dep:mpi", "unit_system/mpi"]
hdf5 = ["dep:hdf5", "unit_system/hdf5"]
rand = ["dep:rand", "unit_system/rand"]
serde = ["dep:serde", "unit_system/serde"]
default = ["f32", "f64", "si"]

[lib]

[dependencies]
glam = { version = "0.24.0", optional = true }
rand = { version = "0.8.5", optional = true }
serde = { version = "1.0.163", features = ["derive"], optional = true }
hdf5 = { version = "0.8.1", optional = true }
mpi = { version = "0.6", default-features = false, features = ["derive"], optional = true }
once_cell = { version = "1.17.1", optional = true }

unit_system = { path = "crates/unit_system", version = "0.2" }

[dev-dependencies]
serde_yaml = "0.9.21"
lazy_static = "1.4.0"
