[package]
name = "diman"
version = "0.5.0"
edition = "2021"
description = "Zero-cost compile-time dimensional analysis."
authors = ["Toni Peter <mail@tonipeter.de>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/tehforsch/diman"
categories = ["science"]
keywords = ["units", "dimensional-analysis"]
readme = "README.md"

[workspace]
members = ["crates/*"]

[features]
num-traits-libm = ["num-traits/libm", "diman_unit_system/num-traits-libm"]
glam = ["dep:glam", "diman_unit_system/glam"]
glam-vec2 = ["glam", "f32", "diman_unit_system/glam-vec2"]
glam-dvec2 = ["glam", "f64", "diman_unit_system/glam-dvec2"]
glam-vec3 = ["glam", "f32", "diman_unit_system/glam-vec3"]
glam-dvec3 = ["glam", "f64", "diman_unit_system/glam-dvec3"]
f32 = ["diman_unit_system/f32"]
f64 = ["diman_unit_system/f64"]
gen-vec-names = ["diman_unit_system/gen-vec-names"]
std = ["diman_unit_system/std"]
si = []
rational-dimensions = ["diman_unit_system/rational-dimensions"]

mpi = ["dep:once_cell", "dep:mpi", "diman_unit_system/mpi"]
hdf5 = ["dep:hdf5", "diman_unit_system/hdf5"]
rand = ["dep:rand", "diman_unit_system/rand"]
serde = ["dep:serde", "diman_unit_system/serde"]
default = ["f32", "f64", "si", "std"]

[lib]

[dependencies]
glam = { version = "0.24.2", optional = true }
rand = { version = "0.8.5", optional = true }
serde = { version = "1.0.193", features = ["derive"], optional = true }
hdf5 = { package = "hdf5-metno", version = "0.9.0", optional = true}
mpi = { version = "0.7", default-features = false, features = ["derive"], optional = true }
once_cell = { version = "1.18.0", optional = true }
num-traits = { version = "0.2.17", default-features = false }

diman_unit_system = { path = "crates/diman_unit_system", version = "0.5", default-features = false }
diman_lib = { path = "crates/diman_lib", version = "0.5" }

[dev-dependencies]
serde_yaml = "0.9.27"
lazy_static = "1.4.0"
