[package]
name = "diman_derive_verify"
version = "0.2.0"
edition = "2021"
authors = [
    "Toni Peter <mail@tonipeter.de>",
]
description = "Internal procedural macros for diman."
license = "MIT OR Apache-2.0"
repository = "https://github.com/tehforsch/diman"

[dependencies]
syn = { version = "1.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"

[lib]
proc-macro = true
