[package]
name = "diman_lib"
version = "0.5.0"
edition = "2021"
authors = [
    "Toni Peter <mail@tonipeter.de>",
]
description = "Commonly used types for internal use in diman."
license = "MIT OR Apache-2.0"
repository = "https://github.com/tehforsch/diman"

[features]
std = []
num-traits-libm = ["num-traits/libm"]

[dependencies]
num-traits = { version = "0.2.17", default-features = false }
