[package]
name = "diman_lib"
authors = [
    "Toni Peter <mail@tonipeter.de>",
]
description = "Commonly used types for internal use in diman."
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[features]
std = []
num-traits-libm = ["num-traits/libm"]

[dependencies]
num-traits = { version = "0.2.17", default-features = false }
